// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiveArticleFlag should render the base live article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bZQynM lnFKgR"
    >
      <div
        class="sc-bwzfXH eyelLP"
      >
        <div
          class="sc-bxivhb fPzEzV"
        >
          <div
            class="sc-ifAKCX fZvQdz"
          />
        </div>
        <span
          class="sc-htpNat bgqAuA"
        >
          BASE
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`LiveArticleFlag should render the breaking article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bZQynM lnFKgR"
    >
      <div
        class="sc-bwzfXH eyelLP"
      >
        <div
          class="sc-bxivhb fPzEzV"
        >
          <div
            class="sc-ifAKCX fZvQdz"
          />
        </div>
        <span
          class="sc-htpNat bgqAuA"
        >
          BREAKING
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`LiveArticleFlag should render the live article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bZQynM lnFKgR"
    >
      <div
        class="sc-bwzfXH eyelLP"
      >
        <div
          class="sc-bxivhb fPzEzV"
        >
          <div
            class="sc-ifAKCX fZvQdz"
          />
        </div>
        <span
          class="sc-htpNat bgqAuA"
        >
          LIVE
        </span>
      </div>
    </div>
  </div>
</body>
`;
